Feat: change side panels of selected panel

--- a/css/pa.css
+++ b/css/pa.css
@@ -1,66 +1,81 @@
-.pa_background-color-basic::after {
-    background-color: rgb(255, 255, 255);
-    content: "";
-}
-
+/* background */
 .pa_background-color-34::after {
     background-color: rgb(34, 34, 34);
     content: "";
 }
-
+.pa_background-color-basic::after {
+    background-color: rgb(255, 255, 255);
+    content: "";
+}
 .pa_background-padding-box::after {
     background-clip: padding-box;
     content: "";
 }
 
+
+/* border */
 .pa_grey-border-221::after {
     border: 1px solid rgb(221, 221, 221);
     content: '';
 }
-
-.pa_search-panel-shadow::after {
-    box-shadow: 0 3px 12px 0 rgb(0 0 0/0.1),0 1px 2px 0 rgb(0 0 0/0.08);
-}
-
-.pa_width-calc-100-20::after {
-    width: calc(100% - 20px);
-    content: "";
-}
-
-.pa_radius-32::after {
-    border-radius: 32px;
-    content: "";
-}
-
 .pa_transparent-border::after {
     border: 1px solid rgba(0, 0, 0, 0);
     content: "";
 }
 
+/* shadow */
+.pa_search-panel-shadow::after {
+    box-shadow: 0 3px 12px 0 rgb(0 0 0/0.1),0 1px 2px 0 rgb(0 0 0/0.08);
+}
+
+/* width */
+.pa_width-calc-100-20::after {
+    width: calc(100% - 20px);
+    content: "";
+}
+
+/* height */
+.pa_height-2::after {
+    height: 2px;
+    content: "";
+}
+
+/* radius */
+.pa_radius-32::after {
+    border-radius: 32px;
+    content: "";
+}
+
+
+/* pointer */
 .pa_cursor-pointer::after {
     cursor: pointer;
     content: "";
 }
-
-.pa_block::after {
-    display: block;
-    content: "";
-}
-
 .pa_pointer-auto::after {
     pointer-events: auto;
     content: "";
 }
 
+/* display */
+.pa_block::after {
+    display: block;
+    content: "";
+}
+
+/* position */
 .pa_absolute::after {
     position: absolute;
     content: "";
 }
 
+/* top */
 .pa_top-0::after {
     top: 0px;
     content: "";
 }
+
+/* bottom */
 .pa_bottom-0::after {
     bottom: 0px;
     content: "";
@@ -69,6 +84,8 @@
     bottom: -6px;
     content: "";
 }
+
+/* left */
 .pa_left-0::after {
     left: 0px;
     content: "";
@@ -77,15 +94,20 @@
     left: 10px;
     content: "";
 }
+
+/* right */
 .pa_right-0::after {
     right: 0px;
     content: "";
 }
 
+/* z-index */
 .pa_z-index-0::after {
     z-index: 0;
     content: "";
 }
+
+/* margin */
 .pa_margin-right-2::after {
     margin-right: 2px;
     content: "";
@@ -95,12 +117,11 @@
     content: "";
 }
 
+
+/* user-select */
 .pa_user-select-auto::after {
     user-select: auto;
     content: "";
 }
 
-.pa_height-2::after {
-    height: 2px;
-    content: "";
-}
+
