--- a/css/pa_interaction.css
+++ b/css/pa_interaction.css
@@ -2,3 +2,8 @@
     background-color: rgb(235, 235, 235);
     content: "";
 }
+
+.pa_hover-grey-221:hover::after {
+    background-color: rgb(221, 221, 221);
+    content: '';
+}
