--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,9 @@
 .background-color-basic {
     background-color: rgb(255, 255, 255);
 }
+.background-color-main {
+    background-color: rgb(255, 56, 92);
+}
 .background-color-221 {
     background-color: rgb(221, 221, 221);
 }
@@ -74,6 +77,12 @@
 }
 .min-width-348 {
     min-width: 348px;
+}
+.max-width-48 {
+    max-width: 48px;
+}
+.max-width-200 {
+    max-width: 200px;
 }
 
 /* padding */
