--- a/css/pb_interaction.css
+++ b/css/pb_interaction.css
@@ -36,6 +36,10 @@
     background-image: linear-gradient(90deg, rgb(221, 221, 221) 0px, rgb(221, 221, 221) 50%, rgb(235, 235, 235) 50%, rgb(235, 235, 235) 100%);
     content: '';
 }
+.pb_hover-grey-gradient-img-reverse:hover::before {
+    background-image: linear-gradient(90deg, rgb(235, 235, 235) 0px, rgb(235, 235, 235) 50%, rgb(221, 221, 221) 50%, rgb(221, 221, 221) 100%);
+    content: '';
+}
 /* width */
 .pb_hover-width-100-29:hover::before {
     width: calc(100% + 29px);
@@ -89,6 +93,10 @@
     left: -30px;
     content: '';
 }
+.pb_hover-left-unset:hover::before {
+    left: unset;
+    content: '';
+}
 
 /* right */
 .pb_hover-right-0:hover::before {
@@ -101,6 +109,10 @@
 }
 .pb_hover-right--30:hover::before {
     right: -30px;
+    content: "";
+}
+.pb_hover-right-30:hover::before {
+    right: 30px;
     content: "";
 }
 
