--- a/css/transition.css
+++ b/css/transition.css
@@ -2,14 +2,14 @@
 .transition-transform {
     transition-property: transform;
 }
-.transition-background-color {
-    transition-property: background-color
-}
-.transition-border-color {
-    transition-property: border-color;
-}
 .transition-opacity {
     transition-property: opacity;
+}
+.transition-max-width {
+    transition-property: max-width;
+}
+.transition-transform-background_color-border_color {
+    transition-property: transform, background-color, border-color;
 }
 
 /* transition 지속시간 */
@@ -19,10 +19,16 @@
 .duration-150ms {
     transition-duration: 0.15s;
 }
+.duration-200ms {
+    transition-duration: 0.2s;
+}
 
 /* transition 지연시간 */
 .delay-100ms {
     transition-delay: 0.1s;
+}
+.delay-0ms {
+    transition-delay: 0s;
 }
 
 /* transition 타이밍 함수 */
