--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,4 @@
+@import 'variables.css';
 /* display */
 .block {
     display: block;
@@ -6,7 +7,7 @@
     display: inline-block;
 }
 
-/* background*/
+/* background */
 .background-color-basic {
     background-color: rgb(255, 255, 255);
 }
@@ -31,6 +32,15 @@
 
 .background-padding-box {
     background-clip: padding-box;
+}
+.background-position-full {
+    background-position: 100%;
+}
+.background-size-200 {
+    background-size: 200% 200%;
+}
+.background-image-circle {
+    background-image: radial-gradient(circle at center,#FF385C 0%,#E61E4D 27.5%,#E31C5F 40%,#D70466 57.5%,#BD1E59 75%,#BD1E59 100%);;
 }
 
 /* height */
@@ -74,6 +84,9 @@
 }
 .width-auto {
     width: auto;
+}
+.min-width-200 {
+    min-width: 200px;
 }
 .min-width-348 {
     min-width: 348px;
