--- a/css/text.css
+++ b/css/text.css
@@ -45,6 +45,9 @@
 .font-400 {
     font-weight: 400;
 }
+.font-500 {
+    font-weight: 500;
+}
 .font-600 {
     font-weight: 600;
 }
@@ -61,6 +64,9 @@
 }
 .font-grey-113 {
     color: rgb(113, 113, 113);
+}
+.font-grey-235 {
+    color: rgb(235, 235, 235);
 }
 .font-white-255 {
     color: rgb(255, 255, 255);
