--- a/css/layout.css
+++ b/css/layout.css
@@ -91,6 +91,12 @@
 .width-auto {
     width: auto;
 }
+.width-max {
+    width: max-content;
+}
+.min-width-56 {
+    min-width: 56px;
+}
 .min-width-200 {
     min-width: 200px;
 }
@@ -320,14 +326,15 @@
     overflow-y: clip;
 }
 
-/* scrollbar-width */
-.scrollbar-width-none {
-    scrollbar-width: none;
-}
-
 /* opacity */
 .opacity-0 {
     opacity: 0;
+}
+.opacity-6 {
+    opacity: 0.6;
+}
+.opacity-10 {
+    opacity: 1;
 }
 
 
