--- a/css/pa_interaction.css
+++ b/css/pa_interaction.css
@@ -1,10 +1,10 @@
 @import 'variables.css';
-.pa_hover-grey-235:hover::after {
+.pa_hover-background-color-235:hover::after {
     background-color: rgb(235, 235, 235);
     content: "";
 }
 
-.pa_hover-grey-221:hover::after {
+.pa_background-color-221:hover::after {
     background-color: rgb(221, 221, 221);
     content: '';
 }
