Design: category item's scroll button

--- a/css/pb.css
+++ b/css/pb.css
@@ -1,1 +1,14 @@
 @import 'variables.css';
+
+.pb_width-40::before {
+    width: 40px;
+    content: "";
+}
+.pb_height-full::before {
+    height: 100%;
+    content: "";
+}
+.pb_z-index--1::before {
+    z-index: -1;
+    content: "";
+}
