--- a/css/basic_element.css
+++ b/css/basic_element.css
@@ -20,8 +20,16 @@ body {
     margin: 0;
     padding: 0;
     line-height: 20.02px;
+    
 }
 
+.hidden-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.hidden-scrollbar::-webkit-scrollbar { 
+    display: none; 
+}
 
 a {
     color: inherit;
