--- a/css/layout.css
+++ b/css/layout.css
@@ -227,6 +227,9 @@
 .left-0 {
     left: 0px;
 }
+.right--8 {
+    right: -8px;
+}
 
 
 /* border radius */
@@ -273,6 +276,9 @@
 }
 .grey-border-235 {
     border: 1px solid rgb(235, 235, 235);
+}
+.black-border-03 {
+    border: 0.5px solid rgba(0, 0, 0 , 0.3)
 }
 .grey-border-right-221 {
     border-right: 1px solid rgb(221, 221, 221);
