--- a/css/pa.css
+++ b/css/pa.css
@@ -34,10 +34,18 @@
     width: calc(100% - 20px);
     content: "";
 }
+.pa_width-40::after {
+    width: 40px;
+    content: "";
+}
 
 /* height */
 .pa_height-2::after {
     height: 2px;
+    content: "";
+}
+.pa_height-full::after {
+    height: 100%;
     content: "";
 }
 
@@ -108,6 +116,10 @@
 }
 
 /* z-index */
+.pa_z-index--1::after {
+    z-index: -1;
+    content: "";
+}
 .pa_z-index-0::after {
     z-index: 0;
     content: "";
