feat: add detail to function guestIndicator
1. Show or hide depending on whether it is disabled

2. restrict width of text using ellipsis

--- a/css/interaction.css
+++ b/css/interaction.css
@@ -47,6 +47,9 @@
 .hover-black-border-000:hover {
     border-color: rgb(0, 0, 0);
 }
+.hover-black-border-34:hover {
+    border: 1px solid rgb(34, 34, 34);
+}
 
 /* hover하면 opacity 변경 */
 .hover-opacity-10:hover {
