--- a/css/text.css
+++ b/css/text.css
@@ -90,6 +90,9 @@
 .text-ellipsis {
     text-overflow: ellipsis;
 }
+.text-clip {
+    text-overflow: clip;
+}
 
 .underline {
     text-decoration: underline;
