--- a/css/pa.css
+++ b/css/pa.css
@@ -143,3 +143,16 @@
 }
 
 
+.pa_travel-details-menu-shadow::after {
+    box-shadow:rgb(0 0 0 / 16%) 0 0 6px;
+    transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    content: "";
+}
+
+
