--- a/css/layout.css
+++ b/css/layout.css
@@ -195,6 +195,9 @@
 }
 
 /* z-index */
+.z-index--1 {
+    z-index: -1;
+}
 .z-index-0 {
     z-index: 0
 }
@@ -268,6 +271,9 @@
 }
 .radius-50 {
     border-radius: 50px;
+}
+.radius-50per {
+    border-radius: 50%;
 }
 .radius-100 {
     border-radius: 100px;
