--- a/css/pa.css
+++ b/css/pa.css
@@ -2,26 +2,21 @@
 /* background */
 .pa_background-color-34::after {
     background-color: rgb(34, 34, 34);
-    content: "";
 }
 .pa_background-color-basic::after {
     background-color: rgb(255, 255, 255);
-    content: "";
 }
 .pa_background-padding-box::after {
     background-clip: padding-box;
-    content: "";
 }
 
 
 /* border */
 .pa_grey-border-221::after {
     border: 1px solid rgb(221, 221, 221);
-    content: '';
 }
 .pa_transparent-border::after {
     border: 1px solid rgba(0, 0, 0, 0);
-    content: "";
 }
 
 /* shadow */
@@ -32,122 +27,107 @@
 /* width */
 .pa_width-calc-100-20::after {
     width: calc(100% - 20px);
-    content: "";
 }
 .pa_width-40::after {
     width: 40px;
-    content: "";
 }
 .pa_width-full::after {
     width: 100%;
-    content: "";
 }
 
 /* height */
 .pa_height-2::after {
     height: 2px;
-    content: "";
 }
 .pa_height-full::after {
     height: 100%;
-    content: "";
 }
 
 
 /* radius */
 .pa_radius-32::after {
     border-radius: 32px;
-    content: "";
 }
 
 
 /* pointer */
 .pa_cursor-pointer::after {
     cursor: pointer;
-    content: "";
 }
 .pa_pointer-auto::after {
     pointer-events: auto;
-    content: "";
 }
 
 /* display */
 .pa_block::after {
     display: block;
-    content: "";
 }
 
 /* position */
 .pa_absolute::after {
     position: absolute;
-    content: "";
 }
 .pa_relative::after {
     position: relative;
-    content: "";
 }
 
 /* top */
 .pa_top-0::after {
     top: 0px;
-    content: "";
 }
 .pa_top-100p-12::after {
     top: calc(100% + 12px);
-    content: "";
 }
 
 /* bottom */
 .pa_bottom-0::after {
     bottom: 0px;
-    content: "";
 }
 .pa_bottom--6::after {
     bottom: -6px;
-    content: "";
 }
 
 /* left */
 .pa_left-0::after {
     left: 0px;
-    content: "";
 }
 .pa_left-10::after {
     left: 10px;
-    content: "";
 }
 
 /* right */
 .pa_right-0::after {
     right: 0px;
-    content: "";
 }
 
 /* z-index */
 .pa_z-index--1::after {
     z-index: -1;
-    content: "";
 }
 .pa_z-index-0::after {
     z-index: 0;
-    content: "";
+}
+
+/* opacity */
+.pa_opacity-0::after {
+    opacity: 0;
+}
+.pa_opacity-10::after {
+    opacity: 1;
 }
 
 /* margin */
 .pa_margin-right-2::after {
     margin-right: 2px;
-    content: "";
 }
 .pa_margin-left-2::after {
     margin-left: 2px;
-    content: "";
 }
 
 
 /* user-select */
 .pa_user-select-auto::after {
     user-select: auto;
-    content: "";
 }
 
 
@@ -160,10 +140,35 @@
     bottom: 0;
     left: 0;
     z-index: -1;
-    content: "";
 }
 
 .pa_header-box-shadow::after {
+    box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
+}
+
+.pa_transform-initial::after {
+    transform: initial;
+}
+.pa_transform-scaleY-2-1point::after {
+    transform: scaleY(2.1);
+}
+
+.pa_transform-origin-50-0::after {
+    transform-origin: 50% 0%;
+}
+
+.pa_header-after-transition-inital::after {
+    transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 250ms cubic-bezier(0.2,0,0,1);
+}
+
+.pa_header-after-transition-changed::after {
+    transition: transform 250ms cubic-bezier(0.2,0,0,1);
+}
+
+.pa_content::after {
     content: "";
 }
+
+
+
 
