--- a/css/layout.css
+++ b/css/layout.css
@@ -23,6 +23,9 @@
 .background-color-247 {
     background-color: rgb(247, 247, 247);
 }
+.background-color-0-25 {
+    background-color: rgba(0, 0, 0 , 0.25);
+}
 .background-color-none {
     background-color: none;
 }
@@ -76,6 +79,9 @@
 }
 .height-auto {
     height: auto;
+}
+.height-100vh {
+    height: 100vh;
 }
 
 /* contain-intrinsic-height */
@@ -224,6 +230,9 @@
 .z-index-10 {
     z-index: 10;
 }
+.z-index-99 {
+    z-index: 99;
+}
 .z-index-100 {
     z-index: 100;
 }
@@ -238,11 +247,20 @@
 .absolute {
     position: absolute;
 }
+.fixed {
+    position: fixed;
+}
 .top-0 {
     top: 0px;
 }
 .left-0 {
     left: 0px;
+}
+.right-0 {
+    right: 0px;
+}
+.bottom-0 {
+    bottom: 0px;
 }
 .right--8 {
     right: -8px;
