--- a/css/grid.css
+++ b/css/grid.css
@@ -43,6 +43,9 @@
 .grid-column-start-1 {
     grid-column-start: 1;
 }
+.grid-column-start-2 {
+    grid-column-start: 2;
+}
 
 /* grid-column-end */
 .grid-column-end-2 {
@@ -100,6 +103,8 @@
     row-gap: 24px;
 }
 
+
+
 .footer-upper-grid-container {
     display: grid;
     column-gap: 8px;
@@ -117,7 +122,7 @@ ul[class="recommand-list-grid-container"]>li>a {
 
 ul[class="recommand-list-grid-container"]>li>a>span:first-child {
     color: rgb(34, 34, 34);
-    font-weight: 600;
+    font-weight: 500;
     font-size: 14px;
     text-align: left;
 }
