--- a/css/interaction.css
+++ b/css/interaction.css
@@ -9,6 +9,9 @@
 .cursor-not-allowed {
     cursor: not-allowed;
 }
+.cursor-default {
+    cursor: default;
+}
 
 /* pointer-events */
 .pointer-none {
