Feat: add custom scrollbar to big searchbar's layer

--- a/css/layout.css
+++ b/css/layout.css
@@ -393,6 +393,9 @@
 .overflow-y-hidden {
     overflow-y:hidden;
 }
+.overflow-y-scroll {
+    overflow-y: scroll;
+}
 .overflow-y-clip {
     overflow-y: clip;
 }
