--- a/css/scroll.css
+++ b/css/scroll.css
@@ -5,3 +5,29 @@
 .scroll-stop-normal {
     scroll-snap-stop: normal;
 }
+
+.layer-scroll-bar::-webkit-scrollbar-thumb {
+    border: 3px solid transparent;
+    background-clip: content-box;
+    border-radius: 11px;
+    background-color: #8e8e8e;
+}
+.layer-scroll-bar::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+.layer-scroll-bar::-webkit-scrollbar {
+    width: 11px;
+    display: block;
+}
+.layer-scroll-bar::-webkit-scrollbar-button {
+    background-color: transparent;
+}
+.layer-scroll-bar::-webkit-scrollbar-track-piece:start {
+    margin-top: 12px;
+}
+.layer-scroll-bar::-webkit-scrollbar-track-piece:end {
+    margin-bottom: 12px;
+}
+.layer-scroll-bar {
+    scrollbar-gutter: stable;
+}
